# doer-cli

./: .gitignore  404.html  AGENTS.md  README.md  SOUL.md  build-nuitka.sh  build.sh  index.html  install.sh  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml
.notes/: FINDINGS.md  RESEARCH.md  TASKS.md
assets/: brand.css
changelog/: index.html
context/: index.html
cookbook/: index.html
docs/: CNAME  architecture.md  changelog.md  context.md  cookbook.md  examples.md  extend.md  index.html  index.md  install.md  philosophy.md  train.md  usage.md
docs/assets/: brand.css
docs/getting-started/: installation.md  quickstart.md
docs/guide/: binary.md  history.md  hot-reload.md  pipe-native.md  self-aware.md
doer/: __init__.py  __main__.py  _gr00t_client.py
doer/hf_jobs/: README.md  gen_dataset.py  launch.sh  prompts.example.txt  train_omni.py  train_text_lora.py  train_vlm.py
extend/: index.html
hf_jobs/: README.md  launch.sh  train_text_lora.py
install/: index.html
overrides/: 404.html  main.html
philosophy/: index.html
search/: search_index.json
tests/: test_gr00t_cli.py  test_gr00t_client.py  test_gr00t_phase1.py
tiny/: __init__.py
train/: index.html
usage/: index.html
