[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "doer-cli"
version = "0.3.0"
description = "doer — one-file pipe-native agent. strands-agents + ollama only."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "strands-agents[ollama]",
]

[project.optional-dependencies]
mlx = ["strands-mlx>=0.2.6"]   # Apple Silicon: local inference + LoRA training
authors = [{name = "cagataycali"}]
license = {text = "Apache-2.0"}
keywords = ["ai", "agent", "ollama", "cli", "pipe", "unix"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/cagataycali/doer-cli"
Issues = "https://github.com/cagataycali/doer-cli/issues"

[project.scripts]
do = "doer:cli"
doer = "doer:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["doer*"]
